NetBSD Problem Report #55033

From mike@fth-devel.net  Sat Feb 29 16:44:37 2020
Return-Path: <mike@fth-devel.net>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 0404A1A9217
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 29 Feb 2020 16:44:36 +0000 (UTC)
Message-Id: <202002291644.01TGiV4o001976@pumpkin.fth-devel.net>
Date: Sat, 29 Feb 2020 17:44:31 +0100 (CET)
From: Michael.Scholz@fth-devel.net
Reply-To: mike@fth-devel.net
To: gnats-bugs@NetBSD.org
Subject: kernel panics when starting X
X-Send-Pr-Version: 3.95

>Number:         55033
>Category:       kern
>Synopsis:       kernel panics when starting X
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    ad
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Feb 29 16:45:00 +0000 2020
>Closed-Date:    Sat Feb 29 23:04:26 +0000 2020
>Last-Modified:  Sat Feb 29 23:05:01 +0000 2020
>Originator:     Michael Scholz
>Release:        NetBSD 9.99.48
>Organization:
>Environment:
System: NetBSD pumpkin.fth-devel.net 9.99.47 NetBSD 9.99.47 (PUMPKIN) #0: Fri Feb 21 12:15:02 CET 2020 toor@pumpkin.fth-devel.net:/stm/obj/usr/src/sys/arch/amd64/compile/PUMPKIN amd64
Architecture: x86_64
Machine: amd64
>Description:
A kernel from 2020/02/28 panics if starting X (transcipt from picture):
panic: kernel diagnostic assertion "uvm_page_owner_locked_p(new_pg, false)" failed: file "/usr/src/sys/arch/x86/x86/pmap.c", line 4319
cpu0: Begin traceback...
vpanic() at netbsd:vpanic+0x1c0
kern_assert() at netbsd:kern_assert+0x53
pmap_enter_ma() at netbsd:pmap_enter_ma+0x1e2
pmap_enter_default() at netbsd:pmap_enter_default+0x22
ttm_bo_uvm_fault() at netbsd:ttm_bo_uvm_fault+0x25b
radeon_ttm_fault() at netbsd:radeon_ttm_fault+0x60
uvm_fault_internal() at netbsd:uvm_fault_internal+0xae5
trap() at netbsd:trap+0x7b6
--- trap (number 6) ---
7f7ff317715f:
cpu0: End traceback
fatal breakpoint trap in supervisor mode
trap type 1 code 0 rip 0xffffffff8021e3b5 c2 0x8 rflags 0x3202 cr2 0x7f7ff6e43000 ilevel 0 rsp 0xffff9500b871e940
curlwp 0xffffca7c6b037980 pid 433.1 lowest kstack 0xffff9500b871a2c0
Stopped in pid 433.1 (X) at netbsd:breakpoint+0x5: leave
>How-To-Repeat:
Get sources with 'cvs up -D 2020/02/28', compile and install the kernel and reboot.
>Fix:
Sorry, I have no fix.  But I found this also on a kernel from -D 2020/02/25.  The last working kernel was from 2020/02/21.

>Release-Note:

>Audit-Trail:
From: Thomas Klausner <wiz@NetBSD.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/55033: kernel panics when starting X
Date: Sat, 29 Feb 2020 20:24:53 +0100

 On Sat, Feb 29, 2020 at 04:45:00PM +0000, Michael.Scholz@fth-devel.net wrote:
 > >Number:         55033
 > >Category:       kern
 > >Synopsis:       kernel panics when starting X

 I saw this too (https://mail-index.netbsd.org/current-users/2020/02/27/msg037850.html)
  Thomas

Responsible-Changed-From-To: kern-bug-people->ad
Responsible-Changed-By: ad@NetBSD.org
Responsible-Changed-When: Sat, 29 Feb 2020 19:54:56 +0000
Responsible-Changed-Why:
will fix


From: "Andrew Doran" <ad@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55033 CVS commit: src/sys/arch/x86/x86
Date: Sat, 29 Feb 2020 20:17:11 +0000

 Module Name:	src
 Committed By:	ad
 Date:		Sat Feb 29 20:17:11 UTC 2020

 Modified Files:
 	src/sys/arch/x86/x86: pmap.c

 Log Message:
 PR kern/55033: kernel panics when starting X

 Remove the uvm_page_owner_locked_p() assertions in the x86 pmap.  The DRM
 code doesn't follow the locking protocol (it's OK though, since pages aren't
 changing identity) and having thought about it more we're most likely going
 to have to do full PV locking to make progress on concurrent fault handing,
 ergo assertions not so important.


 To generate a diff of this commit:
 cvs rdiff -u -r1.359 -r1.360 src/sys/arch/x86/x86/pmap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: ad@NetBSD.org
State-Changed-When: Sat, 29 Feb 2020 21:39:38 +0000
State-Changed-Why:
thanks for the PR, does it work for you now?


State-Changed-From-To: feedback->closed
State-Changed-By: ad@NetBSD.org
State-Changed-When: Sat, 29 Feb 2020 23:04:26 +0000
State-Changed-Why:
submitter confirms fixed


From: Michael Scholz <mike@fth-devel.net>
To: gnats-bugs@netbsd.org
Cc: ad@netbsd.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org, 
    ad@NetBSD.org
Subject: Re: kern/55033 (kernel panics when starting X)
Date: Sun, 1 Mar 2020 00:01:38 +0100 (CET)

 On Sat, 29 Feb 2020, ad@NetBSD.org wrote:

 > Synopsis: kernel panics when starting X
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: ad@NetBSD.org
 > State-Changed-When: Sat, 29 Feb 2020 21:39:38 +0000
 > State-Changed-Why:
 > thanks for the PR, does it work for you now?

 Thank you very much for your really fast answer.  After

      cvs rdiff -u -r1.359 -r1.360 src/sys/arch/x86/x86/pmap.c

 it works for me now.

 Mike

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.